# SnS-TabletopRPG

./: .clang-format  .gitmodules  CMakeLists.txt  Makefile  README.md  format.sh
data/: ai.json  armor.json  containers.json  dialogue.json  items.json  levels.json  loadouts.json  names.json  starting.json  strings.json  weapons.json  wounds.json
src/: .#aicontroller.h  aicontroller.cpp  aicontroller.h  cmake_install.cmake  combatinstance.cpp  combatinstance.h  combatmanager.cpp  combatmanager.h  combatmanagerfactory.cpp  combatmanagerfactory.h  communicationlayer.h  dice.cpp  dice.h  game.cpp  game.h  inputmanager.cpp  log.cpp  log.h  main.cpp  overworld.cpp  overworld.h  scene.cpp  scene.h
src/components/: aicombatcontroller.cpp  aicombatcontroller.h  aicontroller.cpp  aicontroller.h  component.h  inventory.h
src/creatures/: creature.cpp  creature.h  goblin.cpp  goblin.h  human.cpp  human.h  manuever.h  player.cpp  player.h  types.h  utils.cpp  utils.h  vampire.cpp  werewolf.cpp  wound.cpp  wound.h
src/gameeffects/: gameeffect.cpp  gameeffect.h
src/gfxobjects/: gfxcreature.cpp  gfxcreature.h  gfxlevel.cpp  gfxlevel.h  gfxobject.cpp  gfxobject.h  gfxplayer.h  gfxqueue.cpp  gfxqueue.h  gfxselector.cpp  gfxselector.h  types.h  utils.cpp  utils.h
src/items/: armor.cpp  armor.h  bandage.cpp  bandage.h  component.cpp  component.h  consumable.cpp  consumable.h  effect.h  item.cpp  item.h  types.h  utils.cpp  utils.h  weapon.cpp  weapon.h
src/level/: changeleveltrigger.cpp  changeleveltrigger.h  creatureclearedtrigger.h  factionclearedtrigger.cpp  factionclearedtrigger.h  level.cpp  level.h  levelmanager.cpp  levelmanager.h  trigger.cpp  trigger.h
src/object/: campfireobject.cpp  campfireobject.h  chestobject.h  corpseobject.cpp  corpseobject.h  creatureobject.cpp  creatureobject.h  equipmentmanager.cpp  equipmentmanager.h  humanobject.cpp  humanobject.h  itemobject.cpp  itemobject.h  nameable.h  object.cpp  object.h  objectfactory.h  playerobject.cpp  playerobject.h  relationmanager.cpp  relationmanager.h  selectorobject.cpp  selectorobject.h  types.h  utils.cpp  utils.h
src/properties/: property.h
src/ui/: combatui.cpp  combatui.h  common.cpp  common.h  createcharui.cpp  createcharui.h  defenseui.cpp  defenseui.h  dialogueui.cpp  dialogueui.h  gameui.cpp  gameui.h  inspectui.cpp  inspectui.h  inventoryui.cpp  inventoryui.h  keyselect.h  mainmenuui.cpp  mainmenuui.h  numberinput.cpp  numberinput.h  offenseui.cpp  offenseui.h  page.cpp  page.h  positionui.cpp  positionui.h  precombatui.cpp  precombatui.h  preresolveui.cpp  preresolveui.h  shopui.cpp  shopui.h  textinput.cpp  textinput.h  tradeui.cpp  tradeui.h  types.h  uiobject.h  utils.cpp  (+1 more)
src/weapons/: component.cpp  component.h  types.h  utils.h  weapon.cpp  weapon.h
